# github-dashboard-client

./: Cargo.toml  README.md  graphql.config.ts  index.html
.github/workflows/: ci.yml
src/: fetch.rs  home.rs  main.rs  navigation.rs  rag.rs  schema.graphql  server_issues.graphql  server_pull_requests.graphql  top_pane.rs
src/pages/: about.rs  dashboard.rs  mod.rs  profile.rs  search.rs  settings.rs
static/: google_sign.js  rag.css
