[package]
name = "github-dashboard-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
gloo-console = "0.3"
gloo-events = "0.2"
gloo-net = "0.6"
gloo-utils = { version = "0.2", features = ["serde"] }
graphql_client = "0.14"
indexmap = "2"
implicit-clone = "0.5"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2" }
web-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
