[package]
name = "github-dashboard-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
gloo-console = "0.3"
gloo-events = "0.2"
gloo-net = "0.6"
gloo-utils = { version = "0.2", features = ["serde"] }
graphql_client = "0.14"
indexmap = "2"
implicit-clone = "0.5"
js-sys = "0.3"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
regex = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
pulldown-cmark = "0.13.0"
uuid = { version = "1.8.0", features = ["v4", "js"] }
